# op1

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  mbeval.c  mbeval.cpp
.github/workflows/: ci.yml
guess/: guess.ipynb  wip.ipynb
guess/lightning_logs/version_17/: metrics.csv
guess/lightning_logs/version_17/checkpoints/: epoch=0-step=190949.ckpt
guess/lightning_logs/version_20/: metrics.csv
guess/lightning_logs/version_21/: metrics.csv
guess/lightning_logs/version_3/: metrics.csv
guess/lightning_logs/version_3/checkpoints/: epoch=1-step=9574.ckpt
mbeval/: Cargo.toml
mbeval-sys/: Cargo.toml  build.rs
mbeval-sys/mbeval/: .clangd  Makefile
mbeval-sys/mbeval/include/: mbeval.h
mbeval-sys/mbeval/src/: mbeval.c
mbeval-sys/src/: lib.rs
mbeval/src/: main.rs  probe.rs  table.rs  tablebase.rs
op1/: Cargo.toml  op1-server.service  op1-server.socket
op1/benches/: benches.rs
op1/frontend/: index.html  package-lock.json  package.json
op1/frontend/css/: style.css
op1/frontend/src/: main.ts
op1/src/: decompressor.rs  guess.rs  lib.rs  main.rs  meta.rs  table.rs  tablebase.rs
op1/tests/: reference.rs
