[package]
name = "mbeval-sys"
publish = false
descriptions = "Low-level tablebase probing library adapted from Marc Bourzutschky's mbeval.cpp"
repository = "https://github.com/lichess-org/op1"
license = "AGPL-3.0+"
categories = ["games"]
keywords = ["chess", "op1", "tablebase"]
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.16"
