[package]
name = "op1"
publish = false
description = "Probe Marc Bourzutschky's partial 8-piece tablebase"
repository = "https://github.com/lichess-org/op1"
license = "AGPL-3.0+"
categories = ["games"]
keywords = ["chess", "op1", "tablebase"]
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.172"
listenfd = "1.0.2"
mbeval-sys = { path = "../mbeval-sys" }
once_cell = "1.21.3"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
shakmaty = { version = "0.30.0", features = ["serde"] }
tikv-jemallocator = { version = "0.6.1", features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
zerocopy = { version = "0.8.24", features = ["derive", "std"] }
zstd-sys = "2.0.15"

[dev-dependencies]
criterion = "0.8.0"
test-log = { version = "0.2.17", features = ["trace"] }

[[bin]]
name = "op1-server"
path = "src/main.rs"

[[bench]]
name = "benches"
harness = false
